--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<version>4.5.13</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
