--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=Transfer-Service
 #spring.h2.console.enabled=true
-spring.datasource.url=${db_url}
+spring.datasource.url=jdbc:postgresql://postgressetup-ahmedamin372002-157b.g.aivencloud.com:10193/defaultdb
 #spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=${db_username}
-spring.datasource.password=${db_password}
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_0We6IrpmdrKXN0zxEVS
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
 #spring.datasource.url=${db_url}
 #spring.datasource.username=${db_username}
